Moved z-index of menus up to ensure they appear over other elements on the page.

--- a/css/jqface.less
+++ b/css/jqface.less
@@ -408,6 +408,7 @@
   margin:0 5px 10px 0;
   position:relative;
   vertical-align:middle;
+  z-index:666;
 }
 .jqf-menu-button {
   @height: 30px;
